# Auto_T-Rex

./: README.md  main.py  pyproject.toml
DinoGame/: DinoCapturer.py  DinoController.py  __init__.py
