[tool.poetry]
name = "auto-t-rex"
version = "0.1.0"
description = ""
authors = ["Fedor Kuznetsov <kuzneczov-f@susanoo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
pyautogui = "^0.9.54"
matplotlib = "^3.8.0"
keyboard = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
